--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .FooterContent {
   background-color: #f4f4f4;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 4.5rem;
+   position:absolute;
+   bottom:0;
+   width:100%;
+   height:60px;   /* Height of the footer */
 }
