--- a/frontend/src/components/Maincontent/Maincontent.css
+++ b/frontend/src/components/Maincontent/Maincontent.css
@@ -1,4 +1,5 @@
 .GcContainer {
     padding: 0;
     margin: 0;
+    height: 100vh;
 }
