--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,11 +8,16 @@
   min-height: 100vh;
 }
 
-.contentWrap {
-  padding-bottom: 2.5rem;
-}
+/* .contentWrap { */
+/*   padding-bottom: 2.5rem; */
+/* } */
 
 .footer {
+  background-color: #f4f4f4;
+   position:absolute;
+   bottom:0;
+   width:100%;
+   height:60px;   /* Height of the footer */
 }
 
 .appContainer {
